# class-14-class-12-chris-fred

hello/: CMakeLists.txt  hello.c  hello_openmp.c
linear_algebra/: CMakeLists.txt  test_integrate.c
